--- a/components/homemain/homemain.module.css
+++ b/components/homemain/homemain.module.css
@@ -13,6 +13,9 @@
     background-repeat: no-repeat;
     background-color: rgb(0, 0, 40);
     scroll-snap-align: start;
+    @media (min-height:400px) {
+        height:400px;
+    }
 }
 
 .content {
@@ -148,7 +151,7 @@
 }
 
 .section2 {
-    height: 120%;
+    height: 80%;
     width: 100%;
     position: relative;
     background-color: var(--navy);
@@ -163,8 +166,12 @@
     overflow-y: scroll;
 
     @media(max-width:850px) {
-        height: 200%;
+        height: 120%;
         justify-content: space-evenly;
+    }
+
+    @media(max-width:450px) {
+        height:225%;
     }
 }
 
@@ -197,7 +204,7 @@
 
     @media(max-width:850px) {
         grid-template-columns: 1fr 1fr;
-        height: 90%;
+        height: 80%;
     }
 
     @media(max-width:450px) {
@@ -224,10 +231,10 @@
 
 .icon {
     background-color: var(--purple);
-    font-size: 2rem;
+    font-size: 60px;
     border-radius: 5px;
     font-weight: 700;
-    padding: 5%;
+    padding:10px;
     color: #fff;
 }
 
@@ -281,17 +288,17 @@
 
 
 .section3 {
-    height: 75%;
+    height: fit-content;
     padding: 5% 0;
     background-color: var(--navy);
 
     @media(max-width:990px) {
-        height: 90%;
-        padding: 10% 0;
+        padding: 20px 0;
     }
 
     @media(max-width:550px) {
-        height: auto;
+        height: fit-content;
+        padding:20px 0;
     }
 }
 
@@ -309,7 +316,7 @@
 }
 
 .cards {
-    height: 90%;
+    height: 100%;
     color: #000;
     display: flex;
     flex-wrap: wrap;
@@ -321,6 +328,10 @@
     @media(max-width:990px) {
         justify-content: center;
         gap: 10px;
+    }
+
+    @media (max-width:600px) {
+        width:98%;
     }
 }
 
@@ -371,7 +382,6 @@
 
 .useCase {
     font-size: var(--smallfont);
-    font-style: italic;
     padding: 15px 0;
     width: 100%;
     text-align: center;
