--- a/components/trendingBooks/trendingBooks.module.css
+++ b/components/trendingBooks/trendingBooks.module.css
@@ -1,11 +1,13 @@
 .carousel {
-    height: 120%;
+    height: auto;
     width: 100%;
     padding: 0 1%;
     background-color: var(--navy);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-direction: column;
+    gap:15px;
 
     @media(max-width:550px) {
         display: grid;
@@ -17,13 +19,13 @@
 .rightSection {
     display: flex;
     flex-wrap: wrap;
-    width: 75%;
+    width: 80%;
     background-color: var(--purple);
     color: white;
     overflow: auto;
     height: 100%;
     overflow-y: hidden;
-    row-gap: 20px;
+    row-gap: 10px;
     justify-content: center;
     padding: 1%;
     border-radius: 20px;
@@ -33,12 +35,13 @@
     @media(max-width:550px) {
         width: 100%;
         border-radius: 10px;
+        padding:15px 0;
     }
 }
 
 .books {
     width: 100%;
-    height: 80%;
+    height: fit-content;
     display: flex;
     justify-content: space-evenly;
     gap: 20px;
@@ -52,25 +55,23 @@
 .head {
     background-color: var(--purple);
     height: 100%;
+    min-height: 100%;
     width: 20%;
     border-radius: 20px;
     padding: 1%;
-    flex-wrap: wrap;
     align-items: flex-end;
     flex-direction: column;
+    flex-shrink: 0;
     justify-content: center;
     display: flex;
-
-    @media(max-width:550px) {
-        width: 85%;
-        height: 50px;
-        justify-self: center;
-        flex-direction: row;
-        align-items: center;
-        border-radius: 10px;
-        gap: 9px;
-        padding: 0 2%;
-    }
+    width: 75%;
+    height: 50px;
+    justify-self: center;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 10px;
+    gap: 9px;
+    padding: 0 2%;
 
     @media(max-width:485px) {
         width: 100%;
@@ -182,13 +183,6 @@
     background-color: var(--navy);
     padding: 15px;
     border-radius: 10px;
-
-    /* @media(max-width:1000px) {
-        flex-direction: column;
-        height: 60px;
-        justify-content: center;
-        width: 20px;
-    } */
 }
 
 .active {
